# pyrite64-mac

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Changelog.md  README.md  Readme.md  build_app.sh
.github/workflows/: editor.yml  windows.yml
Pyrite64.app/Contents/: Info.plist
data/: libdragon-recommended.txt
data/img/icons/: sprites.xcf
data/patches/: imflownode-macos-std-ranges.patch  libdragon-surface-uint16-cast.patch
data/scripts/: globalScriptTable.cpp  macos_create_env.sh  mingw_create_env.bat  mingw_create_env.sh
data/shader/: lines.frag.dxil  lines.frag.msl  lines.vert.dxil  lines.vert.msl  lines.vert.spv  n64.frag.dxil  n64.frag.msl  n64.frag.spv  n64.vert.dxil  n64.vert.msl  n64.vert.spv  sprites.frag.dxil  sprites.frag.msl  sprites.frag.spv  sprites.vert.dxil  sprites.vert.msl  sprites.vert.spv
docs/: build_editor.md  setup_editor.md
docs/plans/: 2026-02-23-memory-budget-dashboard-design.md  2026-02-23-memory-budget-dashboard.md
n64/: .gitignore  CMakeLists.txt
n64/engine/: Makefile
n64/engine/include/collision/: mesh.h  shapes.h
n64/engine/include/lib/: math.h
n64/engine/include/renderer/: material.h  pipeline.h
n64/engine/include/scene/: camera.h  lighting.h  object.h  scene.h
n64/engine/include/scene/components/: camera.h  code.h  collBody.h  collMesh.h  light.h  model.h
n64/engine/include/script/: globalScript.h
n64/engine/src/assets/: assetManager.cpp
n64/engine/src/audio/: audioManager.cpp  audioManagerPrivate.h
n64/engine/src/collision/: scene.cpp
n64/engine/src/debug/: debugDraw.cpp  overlay.cpp  overlay.h
n64/engine/src/lib/: math.cpp
n64/engine/src/renderer/: drawLayer.cpp  pipelineBigTex.cpp  pipelineDefault.cpp  pipelineHDRBloom.cpp
n64/engine/src/renderer/bigtex/: textures.cpp
n64/engine/src/renderer/particles/: ptxSystem.cpp
n64/engine/src/scene/: camera.cpp  componentTable.cpp  lighting.cpp  scene.cpp  sceneLoader.cpp  sceneManager.cpp
n64/engine/src/scene/components/: audio2d.cpp  camera.cpp  collBody.cpp  collMesh.cpp  model.cpp
n64/examples/empty/: .gitignore
n64/examples/empty/assets/: box.blend  box.glb
n64/examples/empty/data/scenes/1/: scene.json
n64/examples/hello_world/: project.json
n64/examples/hello_world/assets/: box.blend  box.blend1  box.glb
n64/examples/hello_world/data/scenes/1/: conf.json  scene.json
n64/examples/hello_world/data/scenes/2/: scene.json
n64/examples/hello_world/src/user/: New_Script.cpp  New_Script2.cpp
n64/examples/jam25/: project.p64proj
n64/examples/jam25/assets/: discovery_fragment.mp3.conf  proto_spokehul.mp3.conf  sea_of_symbols.mp3.conf
n64/examples/jam25/data/scenes/3/: scene.json
n64/examples/jam25/data/scenes/7/: scene.json
n64/examples/jam25/src/user/: DebugCam.cpp  ObjBot.cpp  Player.cpp  TitleScreen.cpp
src/: cli.cpp  context.h  desktop.file  icon.rc  main.cpp
src/editor/: actions.cpp  globalActions.cpp  keymap.cpp  keymap.h  selectionUtils.cpp  selectionUtils.h  undoRedo.cpp  undoRedo.h
src/editor/imgui/: helper.cpp  helper.h  notification.cpp  notification.h  theme.cpp  theme.h
src/editor/pages/: editorMain.cpp  editorMain.h  editorScene.cpp  editorScene.h
src/editor/pages/parts/: assetInspector.cpp  assetsBrowser.cpp  createProjectOverlay.cpp  logWindow.cpp  memoryDashboard.cpp  memoryDashboard.h  objectInspector.cpp  preferences.cpp  preferences.h  sceneBrowser.cpp  sceneBrowser.h  sceneGraph.cpp  sceneInspector.cpp  toolchainOverlay.cpp  toolchainOverlay.h  viewport3D.cpp  viewport3D.h
src/project/: assetManager.cpp  assetManager.h  project.cpp  project.h
src/project/component/: components.h
src/project/component/shared/: meshFilter.cpp  meshFilter.h
src/project/component/types/: compAnimModel.cpp  compAudio2d.cpp  compCamera.cpp  compCode.cpp  compCollBody.cpp  compCollMesh.cpp  compLight.cpp  compModel.cpp
src/project/scene/: object.cpp  object.h  prefab.cpp  prefab.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h
src/renderer/: camera.cpp  camera.h  framebuffer.cpp  n64Mesh.cpp  n64Mesh.h  object.cpp  object.h  pipeline.cpp  shader.cpp  shader.h  uniforms.h  vertBuffer.cpp  vertBuffer.h  vertex.h
src/renderer/n64/: n64Material.cpp
src/shader/: build.sh  n64.frag.glsl
src/utils/: aabb.h  binaryFile.h  codeParser.cpp  codeParser.h  colors.h  filePicker.cpp  fs.cpp  fs.h  hash.h  json.h  jsonBuilder.h  libdragonVersions.cpp  libdragonVersions.h  logger.cpp  logger.h  proc.cpp  proc.h  prop.h  string.h  time.cpp  time.h  toolchain.cpp  toolchain.h
